Revision history for Alien::Pluto.

0.002000 2017-12-15

    - Test Suite, Command-Line Version Tests
    - Include Alien::bison Dependency,
        Fix Clan Error, "configure: error: bison not found"

0.001000 2017-12-14

    - Initial Release!
    - Include Alien::Texinfo Dependency,
        Fix Candl Error, "makeinfo: command not found"
    - Linux Support (At Least)