@@ -1,5 +1,5 @@
 language: perl
-# v0.007_000
+# v0.008_000
 
 # NEED FIX, CORRELATION #ap010: old version of Travis build OS does not support apt-get installation of libpluto* ???
 #addons:
@@ -44,7 +44,7 @@ before_install:
 install:
 #    - [ "$ALIEN_INSTALL_TYPE" = "system" ] && sudo apt-get install texinfo || echo "$ALIEN_INSTALL_TYPE != 'system', Skipping `sudo apt-get install texinfo`"
     - perl -e 'if ($ENV{ALIEN_INSTALL_TYPE} eq q{system}) { system qw(sudo apt-get install texinfo); }'
-    - makeinfo --version
+#    - makeinfo --version  # causes failure for share installs, command does not yet exist
     - cpanm --verbose --installdeps .
 
 script:
