@@ -1,6 +1,6 @@
 use alienfile;
 
-#our $VERSION = 0.002_000;
+#our $VERSION = 0.003_000;
  
 plugin 'Probe::CBuilder' => (
     # DEV NOTE: can not mix 'aliens' and 'cflags' or 'libs' options below;
@@ -15,6 +15,9 @@ plugin 'Probe::CBuilder' => (
 );
 
 share {
+    # DEV NOTE, CORRELATION #ap020: must update Alien::Texinfo & Alien::bison versions in BOTH alienfile & Makefile.PL
+    requires 'Alien::bison' => '0.019';
+    requires 'Alien::Texinfo' => '0.004';
     plugin Download => (
         url => 'https://wbraswell.github.io/pluto-mirror/',  # GitHub mirror server
         filter => qr/^pluto-.*\.tar\.gz$/,
