@@ -2,6 +2,13 @@ Revision history for Alien::Pluto.
 
 0.002000 2017-12-15
 
+
+
+    NEED BUMP TO A::Texinfo v0.005 WHICH DOES NOT YET EXIST???
+
+
+
+
     - Test Suite, Command-Line Version Tests
     - Include Alien::bison Dependency,
         Fix Clan Error, "configure: error: bison not found"
